--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
       <div class = "_6-course" href="">
         <img src="bee.jpg" class = "img-8">
         <h1 class="course-6-title">
-          Baic Electrical Engineering
+          Basic Electrical Engineering
         </h1>
         <p class = "price-1">
           <strong>FREE</strong>
