--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <img src = "site logo.png" class="img-1">
       <img src = "love to learn.avif" class = "img-2">
     </div>
-    <a href="https://www.youtube.com/watch?v=7Dh73z3icd8&list=PLu0W_9lII9aiXlHcLx-mDH1Qul38wD3aR" target="_blank">
+    <a href="https://revanth15x.github.io/eduhelp3/" target="_blank">
       <div class = "_2nd-div">
         <div class = "first-course" >  
           <img src="dm.jpeg" class = "img-3">
